--- a/BTLJAVAWEB/.settings/org.eclipse.wst.common.component
+++ b/BTLJAVAWEB/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
+        
     <wb-module deploy-name="BTLJAVAWEB">
+                
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
+                
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+                
         <property name="context-root" value="BTLJAVAWEB"/>
+                
         <property name="java-output-path" value="/BTLJAVAWEB/build/classes"/>
+            
     </wb-module>
+    
 </project-modules>
