--- a/BTLJAVAWEB/src/main/webapp/assets/css/DangNhap.css
+++ b/BTLJAVAWEB/src/main/webapp/assets/css/DangNhap.css
@@ -1,5 +1,5 @@
 body {
-	background-image: url('../img/background/BG1.jpg');
+	background-image: url('../img/background/Background.png');
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
