--- a/BTLJAVAWEB/src/main/webapp/assets/css/main_styles.css
+++ b/BTLJAVAWEB/src/main/webapp/assets/css/main_styles.css
@@ -40,7 +40,8 @@ COLOR PALETTE
 1. Fonts
 ***********/
 
-@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700,900');
+/* Import Google Fonts */
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i');
 
 /*********************************
 2. Body and some general stuff
