--- a/BTLJAVAWEB/src/main/webapp/assets/css/main_styles.css
+++ b/BTLJAVAWEB/src/main/webapp/assets/css/main_styles.css
@@ -246,8 +246,7 @@ section
 	-o-transition: all 500ms ease;
 	transition: all 500ms ease;
 }
-.fill_height
-{
+.fill_height {
 	height: 100%;
 }
 .super_container
@@ -828,22 +827,42 @@ section
 	background-size: cover;
 	background-position: center center;
 	margin-top: 150px;
+	background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 100vh;
 }
 .main_slider_content
 {
 	width: 60%;
+	color: white;
 }
 .main_slider_content h6
 {
 	font-weight: 500;
 	text-transform: uppercase;
 	margin-bottom: 29px;
+	color: white;
 }
 .main_slider_content h1
 {
 	font-weight: 400;
 	line-height: 1;
+	color: white;
 }
+
+.main_slider_content a {
+    color: white; 
+  }
+  
+  .main_slider img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover; /* Ensures images fit the section */
+    width: 100%; /* Make the image fill the section width */
+    height: auto; /* Maintain aspect ratio */
+  }
+  
 .red_button
 {
 	display: -webkit-inline-box;
